tools/zed/parsers/aql/test/corpus/basic.txt
==================
select with nested shape and filter
==================

select A { x, y: { z } } filter .n = 1;

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier)))
      (shape_field
        name: (field_identifier
          (identifier))
        shape: (shape
          (shape_field
            name: (field_identifier
              (identifier))))))
    (filter
      (expression
        (path
          step: (field_identifier
            (identifier)))
        (integer)))))

==================
typed parameters with annotations
==================

multi select A { id } filter .s = $s<Status> limit $n<int32>?;

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))))
    (filter
      (expression
        (path
          step: (field_identifier
            (identifier)))
        (parameter
          name: (identifier)
          param_type: (type_identifier
            (identifier)))))
    (limit_clause
      (expression
        (parameter
          name: (identifier)
          param_type: (type_identifier
            (identifier)))))))

==================
directives and shape splat
==================

@response User
multi select Project { *, members: { id } };

---

(source_file
  (directive
    name: (identifier)
    value: (type_identifier
      (identifier)))
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field)
      (shape_field
        name: (field_identifier
          (identifier))
        shape: (shape
          (shape_field
            name: (field_identifier
              (identifier))))))))

==================
boolean filter with grouping
==================

select A { x } filter (.n = 1 or .m = 2) and .k = 3;

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))))
    (filter
      (expression
        (parenthesized_expression
          (expression
            (path
              step: (field_identifier
                (identifier)))
            (integer)
            (path
              step: (field_identifier
                (identifier)))
            (integer)))
        (path
          step: (field_identifier
            (identifier)))
        (integer)))))

==================
subquery field projection
==================

select A { x := (select B filter .id = $g).slug };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (subquery
            type: (type_identifier
              (identifier))
            (filter
              (expression
                (path
                  step: (field_identifier
                    (identifier)))
                (parameter
                  name: (identifier))))
            project: (field_identifier
              (identifier))))))))

==================
subquery field projection with cast
==================

select A { x := (select B filter .id = $g).slug<str> };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (subquery
            type: (type_identifier
              (identifier))
            (filter
              (expression
                (path
                  step: (field_identifier
                    (identifier)))
                (parameter
                  name: (identifier))))
            project: (field_identifier
              (identifier)))
          cast: (type_identifier
            (identifier)))))))

==================
multi subquery in computed field
==================

select A { xs := (multi select B filter .a = A.id) };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (subquery
            type: (type_identifier
              (identifier))
            (filter
              (expression
                (path
                  step: (field_identifier
                    (identifier)))
                (qualified_identifier
                  scope: (identifier)
                  field: (identifier))))))))))

==================
path with cast
==================

select A { o := .b.c.id<uuid> };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (path
            step: (field_identifier
              (identifier))
            step: (field_identifier
              (identifier))
            step: (field_identifier
              (identifier)))
          cast: (type_identifier
            (identifier)))))))

==================
parenthesized expression with cast
==================

select A { w := (.a ?? .b)<str> };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (parenthesized_expression
            (expression
              (path
                step: (field_identifier
                  (identifier)))
              (path
                step: (field_identifier
                  (identifier)))))
          cast: (type_identifier
            (identifier)))))))

==================
literal with cast
==================

select A { x := '{}'<json> };

---

(source_file
  (select_statement
    type: (type_identifier
      (identifier))
    (shape
      (shape_field
        name: (field_identifier
          (identifier))
        value: (expression
          (string)
          cast: (type_identifier
            (identifier)))))))

==================
insert with upsert
==================

insert User { email := $e } unless conflict on .email;

---

(source_file
  (insert_statement
    type: (type_identifier
      (identifier))
    (assignment_block
      (assignment
        name: (field_identifier
          (identifier))
        value: (expression
          (parameter
            name: (identifier)))))
    (on_conflict
      (conflict_target
        field: (field_identifier
          (identifier))))))
